<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    <LinearLayout
        android:id="@+id/hourly_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/flags_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/image_button_georgia"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/georgia"
                android:background="@null"
                android:contentDescription="@string/georgian_flag" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/image_button_uk"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/uk"
                android:background="@null"
                android:contentDescription="@string/uk_flag" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/image_button_jamaica"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/jamaica"
                android:background="@null"
                android:contentDescription="@string/jamaica_flag" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:id="@+id/capital"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/items_container"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>